fix comment edit form button alignment

--- a/frontend/src/ui/pages/SingleReview.module.css
+++ b/frontend/src/ui/pages/SingleReview.module.css
@@ -22,3 +22,7 @@
 .addCommentBox button {
     padding: .8rem
 }
+
+.commentEditForm {
+    display: block;
+}
